added criteria for additional logging

--- a/docker/env.example
+++ b/docker/env.example
@@ -1,11 +1,22 @@
 # Polymarket Monitor Configuration
 # Copy this file to .env and adjust values as needed
 
-# Minimum trade value in USD to log
+# Minimum trade value in USD to log (any qualifying trade)
 TRADE_THRESHOLD=5000
 
 # Seconds between API checks
 POLL_INTERVAL=30
+
+# Trade Category Thresholds
+# Tuna trades: Between TUNA_MIN and TUNA_MAX (exclusive)
+TUNA_MIN=5000
+TUNA_MAX=100000
+
+# Whale trades: Greater than or equal to WHALE_MIN
+WHALE_MIN=100000
+
+# Unusual trader classification: Maximum previous trades for "unusual" classification
+UNUSUAL_TRADER_THRESHOLD=10
 
 # Optional: Set log level (DEBUG, INFO, WARNING, ERROR)
 # LOG_LEVEL=INFO
